# copy_event_listener

./: Cargo.toml  README.md
examples/: listen.rs
src/: database.rs  event.rs  lib.rs  main.rs
src/clipboard/: macos.rs  mod.rs
src/clipboard_content/: clipboard_event.rs  clipboard_storage.rs  mod.rs
