[package]
name = "copy_event_listener"
version = "0.1.0"
edition = "2021"
rust-version = "1.84.0"
description = "Copy event listener for macOS"
license = "MIT"

[dependencies]
objc2 = { version = "^0.5", features = ["relax-void-encoding"] }
objc2-app-kit = { version = "^0.2", features = [
    "NSPasteboard",
    "NSPasteboardItem",
] }
objc2-foundation = { version = "^0.2", features = [
    "NSArray",
    "NSString",
    "NSEnumerator",
    "NSGeometry",
] }
